[tool.poetry]
name = "test-url"
version = "0.1.0"
description = ""
authors = ["Bogdan Shumskiy <bog2530@gmail.com>"]
readme = "README.md"
packages = [{include = "test_url"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.2.0"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
